--- a/module-admin/src/main/resources/static/css/admin.common.css
+++ b/module-admin/src/main/resources/static/css/admin.common.css
@@ -6,6 +6,10 @@ body {
     font-family: Pretendard;
 }
 
+.readonly {
+    background-color: #f3f3f3 !important;
+}
+
 b, strong {
     font-weight: 700;
 }
