--- a/module-admin/src/main/resources/templates/news/newsForm.html
+++ b/module-admin/src/main/resources/templates/news/newsForm.html
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="card-block-small">
-                <button class="btn btn-disabled m-r-5" id="newsCancel">취소</button>
+                <button class="btn btn-gray m-r-5" id="newsCancel">취소</button>
                 <button class="btn btn-primary" id="newsInsert" onclick="newsList.newsInsert()" >저장</button>
             </div>
         </div>
