--- a/module-admin/src/main/resources/templates/inquiry/inquiryForm.html
+++ b/module-admin/src/main/resources/templates/inquiry/inquiryForm.html
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="card-block-small">
-                <button class="btn btn-disabled m-r-5" id="answerCancel">취소</button>
+                <button class="btn btn-gray m-r-5" id="answerCancel">취소</button>
                 <button class="btn btn-primary" id="answerInsert">저장</button>
             </div>
         </div>
